--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,9 @@ bigdecimal = "0.3.0"
 primitive-types = "0.11.1"
 rand = {version = "0.7.3"}
 rand_chacha = "*"
-gpsl = { path = "./gpsl" }
 clap = { version = "3.2.8", features = ["derive"] }
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
+log = "0.4.0"
+env_logger = "0.8.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "*"
