--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ log = "0.4.17"
 env_logger = "0.9.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "*"
+base64 = "*"
+toml = "*"
