--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,17 @@ name = "encrypt"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "encrypt"
+path = "src/lib.rs"
+
+[[bin]]
+name = "encrypt"
+path = "src/bin.rs"
+
+[[bin]]
+name = "elliptic-test"
+path = "src/test_main.rs"
 
 [dependencies]
 bigdecimal = "0.3.0"
